bugfix: dbox preview bugs && color picker z-index

--- a/app/styles/components/services/carjan/carjan-carla.css
+++ b/app/styles/components/services/carjan/carjan-carla.css
@@ -31,6 +31,7 @@
 
 .center-modal {
   left: auto;
+  z-index: 1100 !important;
 }
 
 .stepper {
